--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,25 +3,25 @@
 }
 
 .regBtn {
-    background-color: #39DB4A !important;
+    background-color: rgb(186, 194, 33) !important;
     border-radius: 24px !important;
     border: none !important;
 }
 
 .nav-item :hover,
 .thrice-btn :hover {
-    color: #39DB4A !important;
+    color: rgb(186, 194, 33) !important;
 }
 
 .F {
-    background-color: #39DB4A;
+    background-color: rgb(186, 194, 33);
     color: white;
     border-radius: 12px;
 }
 
 .act a,
 .green {
-    color: #39DB4A;
+    color: rgb(186, 194, 33);
 }
 
 .main-heading {
@@ -49,12 +49,13 @@
     font-weight: bold;
 }
 
-.img{
+.img {
     width: 100px;
     height: 100px;
     background-color: #C1F1C6;
     border-radius: 50%;
 }
+
 /* From Uiverse.io by satyamchaudharydev */
 .button {
     position: relative;
@@ -62,7 +63,7 @@
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     padding-block: 0.5rem;
     padding-inline: 1.25rem;
-    background-color: #39DB4A;
+    background-color: rgb(186, 194, 33);
     border-radius: 9999px;
     display: flex;
     align-items: center;
@@ -128,7 +129,7 @@
 /* From Uiverse.io by cssbuttons-io */
 .fancy {
     background-color: transparent;
-    border: 2px solid #39DB4A;
+    border: 2px solid rgb(186, 194, 33);
     border-radius: 0;
     box-sizing: border-box;
     color: #fff;
@@ -154,7 +155,7 @@
     content: " ";
     width: 1.5625rem;
     height: 2px;
-    background: #39DB4A;
+    background: rgb(186, 194, 33);
     top: 50%;
     left: 1.5em;
     position: absolute;
@@ -172,7 +173,7 @@
     transition: all 0.3s ease-in-out;
     text-transform: uppercase;
     text-decoration: none;
-    color: #39DB4A;
+    color: rgb(186, 194, 33);
 }
 
 .fancy .top-key {
@@ -207,7 +208,7 @@
 
 .fancy:hover {
     color: white;
-    background: #39DB4A;
+    background: rgb(186, 194, 33);
 }
 
 .fancy:hover::before {
@@ -230,21 +231,256 @@
     right: 0;
     width: 0;
 }
-.card-text{
+
+.card-text {
     color: grey;
     font-size: 14px;
 }
 
+.myCard{
+    border-bottom-left-radius: 29px!important;
+}
+.card1 .card-img-top {
+    width: 120px;
+}
+
+/* From Uiverse.io by Prince4fff */
+.card p {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #666;
+}
+
+.card p.small {
+    font-size: 14px;
+}
+
+.go-corner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    background-color: rgb(186, 194, 33);
+    border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+    margin-top: -4px;
+    margin-right: -4px;
+    color: white;
+    font-family: courier, sans;
+}
+
+.card1 {
+    display: block;
+    position: relative;
+    max-width: 262px;
+    background-color: #f2f8f9;
+    color: #32a83e;
+    border-radius: 4px;
+    padding: 32px 24px;
+    margin: 12px;
+    text-decoration: none;
+    z-index: 0;
+    overflow: hidden;
+    border-bottom-left-radius: 87px!important;
+    
+}
+
+.card1:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: rgb(186, 194, 33);
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.25s ease-out;
+}
+
+.card1:hover:before {
+    transform: scale(21);
+}
+
+.card1:hover p {
+    transition: all 0.3s ease-out;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.card1:hover h3 , .card1:hover h5{
+    transition: all 0.3s ease-out;
+    color: #fff;
+}
+
+.card2 {
+    display: block;
+    top: 0px;
+    position: relative;
+    max-width: 262px;
+    background-color: #f2f8f9;
+    border-radius: 4px;
+    padding: 32px 24px;
+    margin: 12px;
+    text-decoration: none;
+    z-index: 0;
+    overflow: hidden;
+    border: 1px solid #f2f8f9;
+}
+
+.card2:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    border: 1px solid #ccc;
+    background-color: white;
+}
+
+.card2:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #aaf0b1;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    transform: scale(2);
+    transform-origin: 50% 50%;
+    transition: transform 0.15s ease-out;
+}
+
+.card2:hover:before {
+    transform: scale(2.15);
+}
+
+.card3 {
+    display: block;
+    top: 0px;
+    position: relative;
+    max-width: 262px;
+    background-color: #f2f8f9;
+    border-radius: 4px;
+    padding: 32px 24px;
+    margin: 12px;
+    text-decoration: none;
+    overflow: hidden;
+    border: 1px solid #f2f8f9;
+}
+
+.card3 .go-corner {
+    opacity: 0.7;
+}
+
+.card3:hover {
+    border: 1px solid #aaf0b1;
+    box-shadow: 0px 0px 999px 999px rgba(255, 255, 255, 0.5);
+    z-index: 500;
+}
+
+.card3:hover p {
+    color: #aaf0b1;
+}
+
+.card3:hover .go-corner {
+    transition: opactiy 0.3s linear;
+    opacity: 1;
+}
+
+.card4 {
+    display: block;
+    top: 0px;
+    position: relative;
+    max-width: 262px;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 32px 24px;
+    margin: 12px;
+    text-decoration: none;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+
+.card4 .go-corner {
+    background-color: #aaf0b1;
+    height: 100%;
+    width: 16px;
+    padding-right: 9px;
+    border-radius: 0;
+    transform: skew(6deg);
+    margin-right: -36px;
+    align-items: start;
+    background-image: linear-gradient(-45deg, #8f479a 1%, #dc2a74 100%);
+}
+
+.card4 .go-arrow {
+    transform: skew(-6deg);
+    margin-left: -2px;
+    margin-top: 9px;
+    opacity: 0;
+}
+
+.card4:hover {
+    border: 1px solid #cd3d73;
+}
+
+.card4 h3 {
+    margin-top: 8px;
+}
+
+.card4:hover .go-corner {
+    margin-right: -12px;
+}
+
+.card4:hover .go-arrow {
+    opacity: 1;
+}
+
+.scrollmenu {
+    width: 100%;
+    height: fit-content;
+
+    /**used to scroll text*/
+    white-space: nowrap;    
+    overflow-x: scroll;
+    overflow-y: hidden;
+    /**keep scrolling when
+      *finger or cursor scrolling*/
+    -webkit-overflow-scrolling: touch; 
+}
+.product-card {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    float: none;
+    display: inline-block;
+}
+/*to hide the scrollbars*/
+::-webkit-scrollbar {
+    display: none;
+}
 /* order button end */
 @media screen and (max-width:426px) {
     .thrice-btn {
         display: flex;
         justify-content: space-around;
     }
-    .part1{
+
+    .part1 {
         margin-top: 50px !important;
     }
-    .first-row{
+
+    .first-row {
         text-align: center !important;
     }
 }
