--- a/src/components/style.css
+++ b/src/components/style.css
@@ -469,6 +469,47 @@
 ::-webkit-scrollbar {
     display: none;
 }
+.img-wrap{
+    background-color: rgb(186, 194, 33);
+    width: 300px;
+    height: 260px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    border-radius: 130px 130px 25px 25px;
+}
+.speech-bubble {
+    width: 150px;
+    height: 50px;
+    background-color:#73ba7a;
+    position: relative;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    color: white;
+    position: absolute;
+    right: 58%;
+    bottom:10% ;
+
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+.speech-bubble:before {
+    content: "";
+    position: absolute;
+    right: 100%;
+    top: 13px;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-right: 26px solid #73ba7a;
+    border-bottom: 13px solid transparent;
+
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+.fourth-cont{
+    position: relative;
+} 
+  
 /* order button end */
 @media screen and (max-width:426px) {
     .thrice-btn {
@@ -483,6 +524,7 @@
     .first-row {
         text-align: center !important;
     }
+
 }
 
 @media screen and (min-width:426px) and (max-width:768px) {
