--- a/src/components/style.css
+++ b/src/components/style.css
@@ -710,7 +710,7 @@
 }
 
 .contact-div li{ 
-    color: rgb(109, 109, 109);
+    color: rgb(85,85,85)
 }
 /* order button end */
 @media screen and (max-width:426px) {
