--- a/src/components/style.css
+++ b/src/components/style.css
@@ -9,9 +9,11 @@
     color: white !important;
 
 }
-.regBtn span:hover{
+
+.regBtn span:hover {
     color: white !important;
 }
+
 .nav-item :hover,
 .thrice-btn :hover {
     color: rgb(186, 194, 33) !important;
@@ -122,7 +124,7 @@
 
 /* contact card */
 
-/* From Uiverse.io by vinodjangid07 */ 
+/* From Uiverse.io by vinodjangid07 */
 .cont-card {
     position: relative;
     width: 200px;
@@ -135,16 +137,16 @@
     border: 2px solid rgb(255, 255, 255);
     text-align: center !important;
     border-radius: 200px;
-  }
-  
-  .background {
+}
+
+.background {
     position: absolute;
     inset: 0;
     background-color: #4158D0;
-    background-image: linear-gradient(43deg, #39DB4A 0%, rgb(186, 194, 33)  46%, #e48912 100%);
-  }
-  
-  .logo {
+    background-image: linear-gradient(43deg, #39DB4A 0%, rgb(186, 194, 33) 46%, #e48912 100%);
+}
+
+.logo {
     position: absolute;
     right: 65%;
     bottom: 50%;
@@ -154,27 +156,27 @@
     font-weight: 600;
     color: #ffffff;
     letter-spacing: 3px;
-  }
-  
-  .logo .logo-svg {
+}
+
+.logo .logo-svg {
     fill: white;
     width: 30px;
     height: 30px;
-  }
-  
-  .icon {
+}
+
+.icon {
     display: inline-block;
     width: 20px;
     height: 20px;
-  }
-  
-  .icon .svg {
+}
+
+.icon .svg {
     fill: rgba(255, 255, 255, 0.797);
     width: 100%;
     transition: all 0.5s ease-in-out;
-  }
-  
-  .box {
+}
+
+.box {
     position: absolute;
     padding: 10px;
     text-align: right;
@@ -185,105 +187,106 @@
     box-shadow: rgba(100, 100, 111, 0.364) -7px 7px 29px 0px;
     transform-origin: bottom left;
     transition: all 1s ease-in-out;
-  }
-  
-  .box::before {
+}
+
+.box::before {
     content: "";
     position: absolute;
     inset: 0;
     border-radius: inherit;
     opacity: 0;
     transition: all 0.5s ease-in-out;
-  }
-  
-  .box:hover .svg {
+}
+
+.box:hover .svg {
     fill: white;
-  }
-  
-  .box1 {
+}
+
+.box1 {
     width: 70%;
     height: 70%;
     bottom: -70%;
     left: -70%;
-  }
-  
-  .box1::before {
+}
+
+.box1::before {
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #ff53d4 60%, #62c2fe 90%);
-  }
-  
-  .box1:hover::before {
+}
+
+.box1:hover::before {
     opacity: 1;
-  }
-  
-  .box1:hover .icon .svg {
+}
+
+.box1:hover .icon .svg {
     filter: drop-shadow(0 0 5px white);
-  }
-  
-  .box2 {
+}
+
+.box2 {
     width: 50%;
     height: 50%;
     bottom: -50%;
     left: -50%;
     transition-delay: 0.2s;
-  }
-  
-  .box2::before {
+}
+
+.box2::before {
     background: radial-gradient(circle at 30% 107%, #91e9ff 0%, #00ACEE 90%);
-  }
-  
-  .box2:hover::before {
+}
+
+.box2:hover::before {
     opacity: 1;
-  }
-  
-  .box2:hover .icon .svg {
+}
+
+.box2:hover .icon .svg {
     filter: drop-shadow(0 0 5px white);
-  }
-  
-  .box3 {
+}
+
+.box3 {
     width: 30%;
     height: 30%;
     bottom: -30%;
     left: -30%;
     transition-delay: 0.4s;
-  }
-  
-  .box3::before {
+}
+
+.box3::before {
     background: radial-gradient(circle at 30% 107%, #969fff 0%, #b349ff 90%);
-  }
-  
-  .box3:hover::before {
+}
+
+.box3:hover::before {
     opacity: 1;
-  }
-  
-  .box3:hover .icon .svg {
+}
+
+.box3:hover .icon .svg {
     filter: drop-shadow(0 0 5px white);
-  }
-  
-  .box4 {
+}
+
+.box4 {
     width: 10%;
     height: 10%;
     bottom: -10%;
     left: -10%;
     transition-delay: 0.6s;
-  }
-  
-  .cont-card:hover {
+}
+
+.cont-card:hover {
     transform: scale(1.1);
-  }
-  
-  .cont-card:hover .box {
+}
+
+.cont-card:hover .box {
     bottom: -1px;
     left: -1px;
-  }
-  
-  .cont-card:hover .logo {
+}
+
+.cont-card:hover .logo {
     transform: translate(70px, -52px);
     letter-spacing: 0px;
-  }
+}
 
-  .contact-div li{
+.contact-div li {
     list-style: none;
-  }
+}
+
 @keyframes shine {
     0% {
         left: -100px;
@@ -646,7 +649,7 @@
 ::-webkit-scrollbar {
     display: none;
     /* scrollbar-color: red; */
-    
+
 }
 
 .img-wrap {
@@ -662,7 +665,7 @@
 .speech-bubble {
     width: 150px;
     height: 50px;
-    background-color: #73ba7a;
+    background-color:#39DB4A;
     position: relative;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -683,7 +686,7 @@
     width: 0;
     height: 0;
     border-top: 13px solid transparent;
-    border-right: 26px solid #73ba7a;
+    border-right: 26px solid #39DB4A;
     border-bottom: 13px solid transparent;
 
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -716,20 +719,23 @@
     color: #5FE26C !important;
 }
 
-.contact-div li{ 
-    color: rgb(85,85,85);
+.contact-div li {
+    color: rgb(85, 85, 85);
 }
-.cont-flu{
+
+.cont-flu {
     background-color: #e7e7e7;
     align-content: center;
 }
-.contact-div li:hover{
-    color:#32a83e;
+
+.contact-div li:hover {
+    color: #32a83e;
     cursor: pointer;
 }
+
 /* order button end */
 
-/* From Uiverse.io by Creatlydev */ 
+/* From Uiverse.io by Creatlydev */
 .exp-button {
     line-height: 1;
     text-decoration: none;
@@ -748,9 +754,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     transition: background-color 0.3s;
-  }
-  
-  .button__icon-wrapper {
+}
+
+.button__icon-wrapper {
     flex-shrink: 0;
     width: 25px;
     height: 25px;
@@ -761,41 +767,67 @@
     display: grid;
     place-items: center;
     overflow: hidden;
-  }
-  
-  .exp-button:hover {
+}
+
+.exp-button:hover {
     background-color: #000;
-  }
-  
-  .exp-button:hover .button__icon-wrapper {
+}
+
+.exp-button:hover .button__icon-wrapper {
     color: #000;
-  }
-  
-  .button__icon-svg--copy {
+}
+
+.button__icon-svg--copy {
     position: absolute;
     transform: translate(-150%, 150%);
-  }
-  
-  .exp-button:hover .button__icon-svg:first-child {
+}
+
+.exp-button:hover .button__icon-svg:first-child {
     transition: transform 0.3s ease-in-out;
     transform: translate(150%, -150%);
-  }
-  
-  .exp-button:hover .button__icon-svg--copy {
+}
+
+.exp-button:hover .button__icon-svg--copy {
     transition: transform 0.3s ease-in-out 0.1s;
     transform: translate(0);
-  }
+}
 
-  .homeImg-wrapper{
+.homeImg-wrapper {
     background-color: rgb(186, 194, 33);
     width: 330px;
     height: 380px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
-    align-items:flex-end;
-  }
-  
+    align-items: flex-end;
+}
+
+.row1 {
+    display: flex;
+    justify-content: space-between !important;
+    align-items: center;
+}
+
+.popup {
+    background-color: white;
+    width: 200px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    border-radius: 9px;
+
+    position: absolute;
+    top: 78%;
+    right: 30%;
+    z-index: 20;
+}
+
+.noodles {
+    border-radius: 10px;
+}
+.popup:hover{
+    background-color: rgb(244, 244, 244);
+    cursor: pointer;
+}
+
 @media screen and (max-width:426px) {
     .thrice-btn {
         display: flex;
@@ -814,6 +846,9 @@
         display: none !important;
         /* this is not working */
     }
+    .popup{
+        display: none;
+    }
 
 }
 
@@ -827,5 +862,8 @@
         display: none !important;
         /* this is not working */
 
+    }
+    .popup{
+        display: none;
     }
 }
